# playdate-hello-world-c-kickstarter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  copy-assets-playdate.cmake
include/: text_manager.h
kickstart_templates/demo_inputs/: CMakeLists.txt
kickstart_templates/demo_inputs/include/: text_manager.h
kickstart_templates/demo_inputs/scripts/: build_mingw_win.cmd
kickstart_templates/demo_inputs/src/: main.c  text_manager.c
kickstart_templates/demo_inputs/src/assets/fonts/: hello-world-c_2024a.fnt
kickstart_templates/empty/: CMakeLists.txt  copy-assets-playdate.cmake
kickstart_templates/empty/src/: main.c  pdxinfo
scripts/: build_mingw_win.cmd  kickstart_win.cmd  kickstart_win__impl.ps1
src/: main.c  pdxinfo  text_manager.c
